--- a/index.html
+++ b/index.html
@@ -94,13 +94,13 @@
         <a href="mailto:alexfiurkov.icloud.com">alexfiurkov.icloud.com</a>
     </li>
                     <li>
-                    <a href="#github">GitHub</a>
+                    <a href="https://alxndr1989.github.io/portfolio/">GitHub</a> 
                     </li>
                     <li>
-                        <a href="#twitter">Twitter</a>
+                        <a href="HTTP://twitter.com/ofiurkov">Twitter</a>
                     </li>
                     <li>
-                        <a href="#facebook">Facebook</a>
+                        <a href="http://www.facebook.com/alexandr.fiurkov">Facebook</a>
                     </li>
                    
                 </ul>
