--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <a href="#work">Work</a>
                 </li>
                 <li>
-                    <a href="#Conatct Me">Contact Me</a>
+                    <a href="#conatct Me">Contact Me</a>
                 </li>
                 <li>
                     <a href="#resume">Resume</a>
