--- a/index.html
+++ b/index.html
@@ -87,13 +87,16 @@
                  
                 </div>
                 <div class="div3">
-                <p>FUTURE PROJECT</p>
+                <iframe src="https://alxndr1989.github.io/password-generator/" id="frame" 
+                    style="position: relative; height: 100%; width: 100%;" >
                 </div>
                 <div class="div4">
-                    <p>FUTURE PROJECT</p>
+                   <iframe src="https://alxndr1989.github.io/Run-Budy/" id="frame" 
+                    style="position: relative; height: 100%; width: 100%;" >
                 </div>
                 <div class="div5">
-                    <p>FUTURE PROJECT</p>
+                   <iframe src="https://alxndr1989.github.io/Run-Budy/" id="frame" 
+                    style="position: relative; height: 100%; width: 100%;" >
                 </div>
               </div>
               </div>
